--- a/Base_2013_day2_in.Rmd
+++ b/Base_2013_day2_in.Rmd
@@ -1,8 +1,12 @@
 ---
 title: "Data Management Plan for the Study 'Do Reputable Open Access Journals Require Open Data Sharing'?"
-author: "YourName, YourInstitution"
+author: "Mansour, Shiraz University"
 date: "`r format(Sys.Date(), '%A, %B %d, %Y')`"
-output: html_document
+output: 
+  html_document:
+    toc: true
+    toc_float: true
+    section_numbering: true
 ---
 
 *****
@@ -35,7 +39,7 @@ Not Applicable
 
 ## Funder
 
-This research is being submitted for funding to the J. Bohannon Foundation http://www.johnbohannon.org/.
+This research is being submitted for funding to the [J. Bohannon Foundation] (http://www.johnbohannon.org/).
 
 ## Grant Reference Number
 
@@ -43,15 +47,15 @@ Not Applicable (Proposal in preparation)
 
 ## Project Name
 
-Do Reputable Open Access Journals Require Open Data Sharing? 
+***Do Reputable Open Access Journals Require Open Data Sharing?***
 
 ### Project Description
 
-This study analyzes the submission requirements of the most reputable open access journals to determine the prevalence and characteristics of data sharing policies. This question is an important one for 21st century authors and readers because open data sharing is seen as a key component of open and more trusted scientific record.
+This study analyzes the submission requirements of the most reputable open access journals to determine the prevalence and characteristics of data sharing policies. This question is an important one for 21^st^ century authors and readers because open data sharing is seen as a key component of open and more trusted scientific record.
 
 According to the Research Data Alliance (RDA) Data Policy Standardisation and Implementation group https://www.rd-alliance.org/groups/data-policy-standardisation-and-implementation:
 
-"the prevalence of research data policies from institutions and research funders is increasing, so publishers and editors are paying more attention to  standardisation and the wider adoption of data sharing policies."
+>"the prevalence of research data policies from institutions and research funders is increasing, so publishers and editors are paying more attention to  standardisation and the wider adoption of data sharing policies."
 
 This study investigates whether the most reputable Open Access journals have data sharing polices and the characteristics of those policies. These policies require authors, in some fashion, to openly disseminate the data and software underlying their published articles.
 
@@ -59,9 +63,9 @@ Our investigation builds on the recent work of Castro et al (2017) who assessed 
 
 In this study, we will include only the most reputable open access journals in our assessment  of journal sharing policies, regardless of language. We will analyze all journals that have attained the Seal of Approval from the Directory of Open Access Journals, DOAJ http://doaj.org (shown below). We will apply the same coding framework devised by Castro et al (2017) to the DOAJ Seal journals. We contend that a more rigorously screened population of open access journals, regardless of language, will yield a more accurate and reproducible set of findings than those published from Castro et al (2017)
 
-||> Insert DOAJ Seal of Approval images/doaj_seal_logo.png <||
+![DOAJ Sea](images/doaj_seal_logo.png)
 
-DOAJ Seal journals are considered the most reputable because they: 
+DOAJ Seal <B>journals</B> are considered the most reputable because they: 
 
 "achieve a high level of openness, adhere to Best Practice and high publishing standards.The Seal is awarded to a journal that fulfills a set of criteria related to accessibility, openness, discoverability, reuse and author rights. It acts as a signal to readers and authors that the journal has generous use and reuse terms, author rights and adheres to the highest level of 'openness'. " (FN: DOAJ selection for Seal Approval is explained in the FAQ at https://doaj.org/faq#seal)
 
@@ -93,7 +97,7 @@ YourName, Principal Investigator, YourInstitution
 
 Researcher ID
 
-ORCID: ||> Insert your ORCID number here <||
+ORCID: [0000-0002-0532-8385](https://orcid.org/0000-0002-0532-8385)
 
 Date of First Version 
 
@@ -133,22 +137,22 @@ knitr::kable(head(doaj_seal, 4), caption = 'A Table of the first 4 rows of the D
 
 The doaj_seal.csv data set currently includes over 1000 reputable open access journals that we will investigate in this study. The data set will be copied and enhanced with additional columns, resulting in the processed data set, doaj_seal_enhanced.csv. The following columns will be added to doaj_seal.csv, in conformance with the Coding Framework of Castro et al (2017).
 
-'Data Policy'  (Boolean)
-Yes
-No
+1. 'Data Policy'  (Boolean)
+    a. Yes
+    b. No
 
-'Data Sharing Policy' (Factor)
-No mention 
-Implied
-Mentioned
-Explicitly encouraged
-Required, but not explicitly tied to editorial decisions
-Required as a condition of publication
+2. 'Data Sharing Policy' (Factor)
+    a. No mention 
+    b. Implied
+    c. Mentioned
+    d. Explicitly encouraged
+    e. Required, but not explicitly tied to editorial decisions
+    f. Required as a condition of publication
 
-'Data Citation Policy' (Factor)
-No mention 
-Implied
-Explicitly encouraged
+3. 'Data Citation Policy' (Factor)
+    a. No mention 
+    b. Implied
+    c. Explicitly encouraged
         
     
 Investigators will examine the websites of each journal listed in the doaj_seal_enhanced.csv file to determine whether the data sharing policy is included in the Instructions to Authors. The Coding Framework published by Castro et al (2017) will be applied.
